# TradingAgents-astock

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
cli/: analyst_registry.py  main.py  models.py  utils.py
config/: screener.example.yaml
docs/: defect-remediation-quickstart.md  event-data-quickstart.md  market-data-quickstart.md  stage6a-paper-quickstart.md  stage6a-tier-c-checklist.md
docs/data/: data-capability-matrix.yaml  free-adjustment-factor-sources.md
scripts/: accept_event_enrichment.py  accept_existing_defect_remediation.py  accept_free_data_path.py  accept_stage6a_paper.py  collect_daily_manifest.sh  collect_stage6a_daily_manifest.py  summarize_stage6a_observation.py
tests/: test_google_api_key.py
tests/cli/: test_analyst_registry.py  test_complete_reports.py
tests/dataflows/: test_mootdx_connection.py
tests/events/: test_acceptance.py  test_board_aliases.py  test_dedup.py  test_event_cli.py  test_event_config.py  test_event_contracts.py  test_event_fixture_provider.py  test_event_repository.py  test_event_sync.py  test_free_event_provider.py  test_normalizer.py  test_pipeline.py  test_provider_probe_contract.py  test_provider_protocol.py  test_risk_rules.py  test_scoring.py  test_stage4_equivalence.py
tests/market_data/: test_a_stock_kline_merge.py  test_adjustments.py  test_corporate_action_contract.py  test_daily_indicators_provider.py  test_daily_indicators_repository.py  test_daily_indicators_sync.py  test_financials_roe.py  test_fixture_provider.py  test_free_astock_provider.py  test_free_astock_sources.py  test_migrations.py  test_open_snapshots.py  test_phase43b.py  test_phase44.py  test_phase45.py  test_phase46.py  test_provider_contract.py  test_security_snapshots.py  test_staging_publish.py  test_sync.py  test_sync_adjustment_factors.py  test_sync_coverage_gates.py  test_sync_free_provider.py  test_sync_policy.py  test_sync_probe_decoupling.py  test_tushare_members.py  test_tushare_provider.py
tests/paper/: conftest.py  test_acceptance.py  test_cli.py  test_contracts.py  test_corporate_actions.py  test_execution.py  test_execution_parity.py  test_five_day_replay.py  test_invariants.py  test_jobs.py  test_locking.py  test_migrations.py  test_planner.py  test_recovery.py  test_reporting.py  test_repository.py  test_screening.py  test_valuation.py
web/: pdf_export.py
(+140 files in other folders)
