[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-astock"
version = "0.2.14"
description = "A股多Agent投研框架 — 基于 TradingAgents 深度特化"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "simonlin1212", email = "simonlin1212@users.noreply.github.com"},
]
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    "streamlit>=1.45.0",
    "fpdf2>=2.8.0",
    "python-dotenv>=1.1.0",
    "mootdx>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/simonlin1212/tradingagents-astock"
Repository = "https://github.com/simonlin1212/tradingagents-astock"
Issues = "https://github.com/simonlin1212/tradingagents-astock/issues"
Upstream = "https://github.com/TauricResearch/TradingAgents"

[project.optional-dependencies]
google = ["langchain-google-genai>=4.0.0"]
screener = [
    "duckdb>=1.3,<2",
    "PyYAML>=6.0,<7",
]
screener-tushare = [
    "tushare>=1.4,<2",
]
screener-arrow = [
    "pyarrow>=19,<22",
]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=6,<8",
    "ruff>=0.11,<1",
]

[project.scripts]
tradingagents = "cli.main:app"
tradingagents-web = "web.launch:main"
tradingagents-screen = "tradingagents.screener.cli:app"
tradingagents-market-data = "tradingagents.market_data.cli:app"
tradingagents-scheduler = "tradingagents.scheduler.cli:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*", "web*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
